--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,9 @@ jobs:
       postgres:
         image: postgres:12
         env:
-          POSTGRES_PASSWORD: password
           POSTGRES_USER: root
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: simple_bank
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -38,7 +37,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run migrations
-      run: make migrationup
+      run: make migrateup
 
     - name: Test
       run: make test
