--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     services:
       postgres:
         image: postgres:12
+        ports: 
+          - 5432:5432
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: password
@@ -37,9 +39,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install golang-migrate
-      run: 
+      run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        sudo mv migrate /usr/bin/
         which migrate
 
     - name: Run migrations
