--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: simple_bank
+          POSTGRES_DB: simple_bank_sys
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
