--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
+      uses: azure/setup-kubectl@v1
       with:
-        version: '<version>'
+        version: 'v1.21.3'
       id: install
 
     - name: Configure AWS credentials
